[package]
name = "glow-test"
version = "0.1.0"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.3"
glow = "0.8.1"
anyhow = "1.0.39"
imgui = "0.7.0"
image = "0.23.14"
